--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "core-js": "^2.0.0",
     "jquery": "^2.2.0",
     "less-loader": "^2.2.2",
+    "lodash": "^4.3.0",
     "normalize.css": "^3.0.3",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
